--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,20 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    
+ 
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-<script src="https://api-maps.yandex.ru/2.1.44/?lang=ru_RU&amp;apikey=9f8b27f7-c36c-4f45-8f30-17b7b837174b" type="text/javascript"></script>
-<!--<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=9f8b27f7-c36c-4f45-8f30-17b7b837174b" type="text/javascript"></script>-->
-
-
-<script src="https://yastatic.net/s3/mapsapi-jslibs/heatmap/0.0.1/heatmap.min.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -27,6 +17,21 @@
     <div id="gradient-scale"></div>
     <div class="segment-label"></div>
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+<script src="https://api-maps.yandex.ru/2.1.44/?lang=ru_RU&amp;apikey=9f8b27f7-c36c-4f45-8f30-17b7b837174b" type="text/javascript"></script>
+<script src="https://yastatic.net/s3/mapsapi-jslibs/heatmap/0.0.1/heatmap.min.js" type="text/javascript"></script>
+
+
+<script src="{{ url_for('static', filename='js/gradient_test.js') }}"></script>
+
+<script src="{{ url_for('static', filename='js/medisine_json.js') }}"></script>
+<script src="{{ url_for('static', filename='js/new_test_json.js') }}"></script>
 
 
 <!--<script src="{{ url_for('static', filename='js/test.js') }}"></script>
@@ -46,13 +51,6 @@
 
 <script src="{{ url_for('static', filename='js/version_test.js') }}"></script>
 -->
-<script src="{{ url_for('static', filename='js/medisine_json.js') }}"></script>
-<script src="{{ url_for('static', filename='js/new_test_json.js') }}"></script>
-
-
-<script src="{{ url_for('static', filename='js/gradient_test.js') }}"></script>
-
-
 
 </body>
 </html>
